syntax = "proto3";
package models;

message Chain {
    uint64 chainID = 1;
    string chainType = 2;
}
